--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,10 +3,10 @@
 @import './utilites/mixins';
 @import './utilites/general';
 @import './components/header';
-@import './components/hero';
-@import './components/advantages';
-@import './components/footer';
-@import './components/our-clients';
-@import './components/our-team';
-@import './components/scope-of-business';
-@import './components/modal';
+// @import './components/hero';
+// @import './components/advantages';
+// @import './components/footer';
+// @import './components/our-clients';
+// @import './components/our-team';
+// @import './components/scope-of-business';
+// @import './components/modal';
