--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,7 +3,7 @@
 @import './utilites/mixins';
 @import './utilites/general';
 @import './components/header';
-// @import './components/hero';
+@import './components/hero';
 // @import './components/advantages';
 // @import './components/footer';
 // @import './components/our-clients';
