--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -2,7 +2,7 @@
 @import './utilites/placeholders';
 @import './utilites/mixins';
 @import './utilites/general';
-@import './components/portfolio-header';
+@import './components/header';
 @import './components/filterbuttons';
 @import './components/projects';
 @import './components/footer';
