--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -33,6 +33,12 @@ body {
   font-size: 14px;
 }
 
+@media screen and (min-width: 1600px) {
+  body {
+    padding-top: 80px;
+  }
+}
+
 h2,
 h3 {
   display: block;
@@ -66,16 +72,38 @@ p {
   pointer-events: none;
 }
 
+.is-visible {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  visibility: visible;
+  opacity: 1;
+  overflow: scroll;
+  pointer-events: visible;
+}
+
 header {
+  position: relative;
+  width: 100%;
+  margin: auto;
   border-bottom: 1px solid #ececec;
 }
 
-.container {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-right: auto;
-  margin-left: auto;
+.logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-family: Raleway, sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  color: #212121;
+  margin-right: 85px;
+}
+
+.logo-part1 {
+  color: #2196f3;
 }
 
 .navigation {
@@ -85,48 +113,91 @@ header {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+  height: 60px;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
-.main-navigation {
+.menu-button {
+  background-color: transparent;
+  border: 0;
+}
+
+.menu-button.is-open .menu-close-icon {
+  display: block;
+}
+
+.menu-button.is-open .menu-open-icon {
+  display: none;
+}
+
+.menu-close-icon {
+  display: none;
+}
+
+.menu-button-icon {
+  width: 40px;
+  height: 40px;
+  fill: #212121;
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu-button-icon:hover, .menu-button-icon:focus {
+  fill: #2196f3;
+}
+
+.header-menu-container {
+  position: absolute;
+  width: 100%;
+  top: 61px;
+  left: 0;
+  display: none;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+
+.header-menu-container.is-open {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-left: 85px;
+  z-index: 2;
 }
 
-.main-navigation .item:not(:last-child) {
-  margin-right: 50px;
+.envelope {
+  width: 18px;
+  height: 11px;
 }
 
-.logo {
-  font-family: Raleway, sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  color: #212121;
-}
-
-.logo-part1 {
-  color: #2196f3;
+.smartphone {
+  width: 18px;
+  height: 15px;
 }
 
 .navigation-item {
   position: relative;
-  display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
   font-family: Roboto, sans-serif;
   font-weight: 500;
-  font-size: 14px;
+  font-size: 18px;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: #212121;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin-bottom: 40px;
 }
 
 .navigation-item::after {
@@ -145,25 +216,29 @@ header {
   color: #2196f3;
 }
 
+.navigation-item.current {
+  color: #2196f3;
+}
+
 .navigation-item.current.navigation-item::after {
   opacity: 1;
 }
 
-.contact-links {
+.contact-links,
+.main-navigation {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  margin-left: auto;
-}
-
-.contact-links .item + .item {
-  margin-left: 30px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .contact-link-item {
@@ -176,9 +251,10 @@ header {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
+  margin-top: 16px;
   font-family: Roboto, sans-serif;
   font-weight: 500;
-  font-size: 14px;
+  font-size: 18px;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: #757575;
@@ -191,18 +267,119 @@ header {
 }
 
 .contact-link-icon {
+  display: block;
   margin-right: 8px;
   fill: currentColor;
 }
 
-.envelope {
-  width: 18px;
-  height: 11px;
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  header {
+    width: 480px;
+  }
 }
 
-.smartphone {
-  width: 10px;
-  height: 15px;
+@media screen and (min-width: 768px) {
+  .menu-button {
+    display: none;
+  }
+  .navigation {
+    height: 80px;
+    max-width: 1200px;
+    width: 100%;
+  }
+  .main-navigation {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .main-navigation .navigation-item {
+    padding-top: 32px;
+    padding-bottom: 32px;
+    font-size: 14px;
+    margin: 0;
+  }
+  .main-navigation .item:not(:last-child) {
+    margin-right: 50px;
+  }
+  .contact-links {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .contact-links .item + .item {
+    margin-top: 10px;
+  }
+  .header-menu-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    position: static;
+    padding: 0;
+    margin: 0;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1600px) {
+  .contact-link-item {
+    margin-top: 0;
+    font-size: 12px;
+  }
+  header {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1600px) {
+  header {
+    position: fixed;
+    top: 0;
+    z-index: 2;
+    background-color: #ffffff;
+    width: 100%;
+  }
+  .contact-links {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .contact-links .item + .item {
+    margin-top: 0;
+    margin-left: 30px;
+  }
+  .contact-link-item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-top: 0;
+    font-size: 14px;
+  }
 }
 
 .filter-list {
