--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,25 +1,17 @@
 header {
+  position: relative;
   width: 100%;
+  margin: auto;
   border-bottom: 1px solid #ececec;
 }
 
-@media screen and (min-width: 480px) and(max-width:767px) {
-  header {
-    width: 480px;
-  }
-}
-
-@media screen and (min-width: 768px) and(max-width:1600px) {
-  header {
-    width: 480px;
-  }
-}
-
 .logo {
+  display: flex;
   @include logofont($size: 26px);
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: $title-nav-color;
+  margin-right: 85px;
 
   &-part1 {
     color: $focus-color;
@@ -27,8 +19,7 @@ header {
 }
 
 .navigation {
-  @include display($justify: space-around);
-  position: relative;
+  @include display($justify: space-between);
   width: 100%;
   height: 60px;
   padding-left: 15px;
@@ -38,23 +29,23 @@ header {
   margin-right: auto;
   margin-left: auto;
 }
+
 .menu-button {
   background-color: transparent;
   border: 0;
 
-  & ~ .menu-close-icon {
-    display: none;
+  &.is-open {
+    & .menu-close-icon {
+      display: block;
+    }
+    & .menu-open-icon {
+      display: none;
+    }
   }
 }
 
-.menu-button.is-open .menu-open-icon {
+.menu-close-icon {
   display: none;
-}
-
-@media screen and (min-width: 768px) {
-  .menu-button {
-    display: none;
-  }
 }
 
 .menu-button-icon {
@@ -73,15 +64,17 @@ header {
   position: absolute;
   width: 100%;
   top: 61px;
-  left: -15px;
-  display: flex;
+  left: 0;
+  display: none;
   flex-direction: column;
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: $primary-white-color;
-}
 
-screen and (min-width: 768px) {
+  &.is-open {
+    display: flex;
+    z-index: 2;
+  }
 }
 
 .envelope {
@@ -90,13 +83,13 @@ screen and (min-width: 768px) {
 }
 
 .smartphone {
-  width: 10px;
+  width: 18px;
   height: 15px;
 }
 
 .navigation-item {
   position: relative;
-  @include generalfont($weight: 500);
+  @include generalfont($weight: 500, $size: 18px);
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: $title-nav-color;
@@ -106,7 +99,7 @@ screen and (min-width: 768px) {
   &::after {
     content: '';
     position: absolute;
-    bottom: -10px;
+    bottom: 0;
     left: 0;
     width: 100%;
     height: 4px;
@@ -137,7 +130,7 @@ screen and (min-width: 768px) {
 .contact-link-item {
   @include display($justify: flex-start);
   margin-top: 16px;
-  @include generalfont($weight: 500);
+  @include generalfont($weight: 500, $size: 18px);
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: $primary-text-color;
@@ -150,32 +143,91 @@ screen and (min-width: 768px) {
 }
 
 .contact-link-icon {
+  display: block;
   margin-right: 8px;
   fill: currentColor;
 }
 
-// .main-navigation {
-//   // display: flex;
-//   // margin-left: 85px;
+@media screen and (min-width: 480px) and(max-width:767px) {
+  header {
+    width: 480px;
+  }
+}
 
-//   .item:not(:last-child) {
-//     margin-right: 50px;
-//   }
-// }
+@media screen and (min-width: 768px) {
+  .menu-button {
+    display: none;
+  }
 
-// .contact-links {
-//   @include display($justify: flex-start);
-//   margin-left: auto;
+  .navigation {
+    height: 80px;
+    max-width: 1200px;
+    width: 100%;
+  }
 
-//   .item + .item {
-//     margin-left: 30px;
-//   }
-// }
+  .main-navigation {
+    flex-direction: row;
 
-// header {
-//   position: fixed;
-//   top: 0;
-//   z-index: 2;
-//   background-color: $primary-white-color;
-//   width: 100%;
-// }
+    & .navigation-item {
+      padding-top: 32px;
+      padding-bottom: 32px;
+      font-size: 14px;
+      margin: 0;
+    }
+
+    .item:not(:last-child) {
+      margin-right: 50px;
+    }
+  }
+  .contact-links {
+    @include display($align: flex-start);
+
+    .item + .item {
+      margin-top: 10px;
+    }
+  }
+  .header-menu-container {
+    @include display($justify: space-between);
+    flex-direction: row;
+    position: static;
+    padding: 0;
+    margin: 0;
+  }
+}
+
+@media screen and (min-width: 768px) and(max-width:1600px) {
+  .contact-link-item {
+    margin-top: 0;
+    font-size: 12px;
+  }
+
+  header {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1600px) {
+  header {
+    position: fixed;
+    top: 0;
+    z-index: 2;
+    background-color: $primary-white-color;
+    width: 100%;
+  }
+
+  .contact-links {
+    flex-direction: row;
+    align-items: center;
+
+    .item + .item {
+      margin-top: 0;
+      margin-left: 30px;
+    }
+  }
+
+  .contact-link-item {
+    @include display;
+    margin-top: 0;
+    font-size: 14px;
+  }
+}
