--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -5,16 +5,25 @@
       rgba(47, 48, 58, 0.8),
       rgba(47, 48, 58, 0.8)
     ),
-    url(../images/body/pictures/hero.jpg);
-  background-size: cover;
+    url(../images/body/pictures/hero-480.jpg);
+  background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
   background-color: $primary-text-color;
-  width: 1600px;
-  height: 600px;
+  max-width: 480px;
+  width: 100%;
+  height: 400px;
   text-align: center;
   margin-left: auto;
   margin-right: auto;
+  @media (min-resolution: 2dppx) {
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.8),
+        rgba(47, 48, 58, 0.8)
+      ),
+      url(../images/body/pictures/hero-960.jpg);
+  }
 
   &-container {
     display: block;
@@ -36,10 +45,57 @@
 
   h1 {
     margin: 0;
-    @include generalfont(900, 44px);
+    @include generalfont(900, 26px);
     line-height: 1.36;
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: $primary-white-color;
+  }
+}
+@media screen and (min-width: 768px) and(max-width:1599px) {
+  .order-service {
+    max-width: 768px;
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.8),
+        rgba(47, 48, 58, 0.8)
+      ),
+      url(../images/body/pictures/hero-768.jpg);
+
+    @media (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          to right,
+          rgba(47, 48, 58, 0.8),
+          rgba(47, 48, 58, 0.8)
+        ),
+        url(../images/body/pictures/hero-1536.jpg);
+    }
+  }
+}
+
+@media screen and (min-width: 1600px) {
+  .order-service {
+    height: 600px;
+    max-width: 1600px;
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.8),
+        rgba(47, 48, 58, 0.8)
+      ),
+      url(../images/body/pictures/hero-1600.jpg);
+    background-size: cover;
+
+    @media (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          to right,
+          rgba(47, 48, 58, 0.8),
+          rgba(47, 48, 58, 0.8)
+        ),
+        url(../images/body/pictures/hero-3200.jpg);
+    }
+
+    h1 {
+      @include generalfont(900, 44px);
+    }
   }
 }
