--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,4 +9,4 @@
 // @import './components/our-clients';
 // @import './components/our-team';
 // @import './components/scope-of-business';
-// @import './components/modal';
+@import './components/modal';
