--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -20,8 +20,10 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 528px;
-  height: 581px;
+  max-width: 450px;
+  width: 100%;
+  max-height: 609px;
+  height: 100%;
   background-color: $primary-white-color;
   padding: 40px;
   opacity: 1;
@@ -97,7 +99,7 @@
 }
 
 .form-input {
-  width: 448px;
+  width: 370px;
   height: 40px;
   padding-left: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -135,7 +137,7 @@
 }
 
 .comment {
-  width: 448px;
+  width: 370px;
   height: 120px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
@@ -183,7 +185,7 @@
 
 .checkbox-label {
   @include display($justify: space-evenly);
-  @include generalfont;
+  @include generalfont(400, 12px);
   line-height: 1.7;
   color: $primary-text-color;
 
@@ -229,4 +231,19 @@
   letter-spacing: 0.06em;
   color: $primary-white-color;
   background-color: $focus-color;
+}
+
+@media screen and (min-width: 1600px) {
+  .modal-window {
+    min-width: 528px;
+    height: 581px;
+  }
+  .checkbox-label {
+    font-size: 14px;
+  }
+
+  .comment,
+  .form-input {
+    width: 448px;
+  }
 }
