--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,7 +4,7 @@
 @import './utilites/general';
 @import './components/header';
 @import './components/hero';
-// @import './components/advantages';
+@import './components/advantages';
 // @import './components/footer';
 // @import './components/our-clients';
 // @import './components/our-team';
