--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -16,7 +16,9 @@
   text-align: center;
   margin-left: auto;
   margin-right: auto;
-  @media (min-resolution: 2dppx) {
+  @media (min-resolution: 2dppx),
+    (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi) {
     background-image: linear-gradient(
         to right,
         rgba(47, 48, 58, 0.8),
@@ -62,7 +64,9 @@
       ),
       url(../images/body/pictures/hero-768.jpg);
 
-    @media (min-resolution: 2dppx) {
+    @media (min-resolution: 2dppx),
+      (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi) {
       background-image: linear-gradient(
           to right,
           rgba(47, 48, 58, 0.8),
@@ -85,7 +89,9 @@
       url(../images/body/pictures/hero-1600.jpg);
     background-size: cover;
 
-    @media (min-resolution: 2dppx) {
+    @media (min-resolution: 2dppx),
+      (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi) {
       background-image: linear-gradient(
           to right,
           rgba(47, 48, 58, 0.8),
