--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,5 +8,5 @@
 // @import './components/footer';
 // @import './components/our-clients';
 // @import './components/our-team';
-// @import './components/scope-of-business';
+@import './components/scope-of-business';
 @import './components/modal';
