--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,7 @@ html {
 
 body {
   margin: 0;
+  margin: 0 15px;
   font-family: Roboto, sans-serif;
   font-weight: 400;
   font-size: 14px;
@@ -36,6 +37,7 @@ body {
 @media screen and (min-width: 1600px) {
   body {
     padding-top: 80px;
+    margin: 0;
   }
 }
 
@@ -553,7 +555,7 @@ header {
     width: calc((100% - 30px * 2) / 2);
     margin: 0;
   }
-  .advantages-list .item:not(2n) {
+  .advantages-list .item:not(:nth-child(2n)) {
     margin-right: 30px;
   }
 }
@@ -573,6 +575,147 @@ header {
     margin: 0;
   }
   .advantages-list .item:not(:last-child) {
+    margin-right: 30px;
+  }
+}
+
+.our-team {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background: #f5f4fa;
+  text-align: center;
+}
+
+.our-team h2 {
+  font-size: 36px;
+  line-height: 1.16;
+  letter-spacing: 0.03em;
+  margin-bottom: 50px;
+}
+
+.our-team img {
+  max-width: 100%;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: auto;
+  display: inline-block;
+  margin-bottom: 30px;
+}
+
+.our-team h3 {
+  margin-bottom: 10px;
+  font-family: Roboto, sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.18;
+  letter-spacing: 0.03em;
+}
+
+.our-team p {
+  display: inline-block;
+  margin-bottom: 16px;
+  line-height: 1.18;
+  letter-spacing: 0.03em;
+}
+
+.team-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.team-member {
+  padding-bottom: 35px;
+  max-width: 480px;
+  margin: 30px 15px;
+  overflow: hidden;
+  background-color: #ffffff;
+  -webkit-box-shadow: 0 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0 1px 3px rgba(0, 0, 0, 0.12);
+          box-shadow: 0 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0 1px 3px rgba(0, 0, 0, 0.12);
+  border-radius: 0 0 4px 4px;
+}
+
+.social-links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.social-links .item:not(:last-child) {
+  margin-right: 10px;
+}
+
+.social-links .item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-links .item:hover,
+.social-links .item:focus {
+  background-color: #2196f3;
+}
+
+.social-links-icon {
+  width: 20px;
+  height: 20px;
+  fill: #afb1b8;
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.item:hover .social-links-icon,
+.item:focus .social-links-icon {
+  fill: #ffffff;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1599px) {
+  .advantages {
+    margin-top: 30px;
+    max-width: 768px;
+  }
+  .advantages-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .advantages-list .item {
+    width: calc((100% - 30px * 2) / 2);
+    margin: 0;
+  }
+  .advantages-list .item:not(:nth-child(2n)) {
     margin-right: 30px;
   }
 }
