--- a/sass/components/_advantages.scss
+++ b/sass/components/_advantages.scss
@@ -55,7 +55,7 @@
     margin: 0;
   }
 
-  .advantages-list .item:not(2n) {
+  .advantages-list .item:not(:nth-child(2n)) {
     margin-right: 30px;
   }
 }
