--- a/sass/components/_our-team.scss
+++ b/sass/components/_our-team.scss
@@ -1,6 +1,6 @@
 .our-team {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
   background: $background-color;
   text-align: center;
 
@@ -11,10 +11,10 @@
     margin-bottom: 50px;
   }
 
-  &-list {
-    @include display($justify: flex-start);
-  }
   img {
+    max-width: 100%;
+    width: fit-content;
+    height: auto;
     display: inline-block;
     margin-bottom: 30px;
   }
@@ -33,19 +33,22 @@
     letter-spacing: 0.03em;
   }
 }
+.team-container {
+  @include display;
+  flex-direction: column;
+  margin-right: auto;
+  margin-left: auto;
+}
 
 .team-member {
-  width: calc((100% - 90px) / 4);
   padding-bottom: 35px;
-  margin-right: 30px;
+  max-width: 480px;
+  margin: 30px 15px;
+  overflow: hidden;
   background-color: $primary-white-color;
   box-shadow: 0 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0 1px 3px rgba(0, 0, 0, 0.12);
   border-radius: 0 0 4px 4px;
-
-  &:nth-child(4n) {
-    margin-right: 0;
-  }
 }
 
 .social-links {
@@ -78,5 +81,25 @@
   .item:hover &-icon,
   .item:focus &-icon {
     fill: $primary-white-color;
+  }
+}
+
+@media screen and (min-width: 768px) and(max-width:1599px) {
+  .advantages {
+    margin-top: 30px;
+    max-width: 768px;
+  }
+  .advantages-list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .advantages-list .item {
+    width: calc((100% - 30px * 2) / 2);
+    margin: 0;
+  }
+
+  .advantages-list .item:not(:nth-child(2n)) {
+    margin-right: 30px;
   }
 }
