--- a/sass/utilites/_general.scss
+++ b/sass/utilites/_general.scss
@@ -14,10 +14,12 @@ html {
 
 body {
   margin: 0;
+  margin: 0 15px;
   @include generalfont;
 
   @media screen and (min-width: 1600px) {
     padding-top: 80px;
+    margin: 0;
   }
 }
 
