--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,7 +6,7 @@
 @import './components/hero';
 @import './components/advantages';
 // @import './components/footer';
-// @import './components/our-clients';
+@import './components/our-clients';
 @import './components/our-team';
 @import './components/scope-of-business';
 @import './components/modal';
