--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,6 @@ html {
 
 body {
   margin: 0;
-  margin: 0 15px;
   font-family: Roboto, sans-serif;
   font-weight: 400;
   font-size: 14px;
@@ -37,7 +36,6 @@ body {
 @media screen and (min-width: 1600px) {
   body {
     padding-top: 80px;
-    margin: 0;
   }
 }
 
@@ -496,7 +494,7 @@ header {
 }
 
 .advantages {
-  margin-top: 60px;
+  margin: 60px 0;
   max-width: 480px;
   margin-left: auto;
   margin-right: auto;
@@ -541,7 +539,6 @@ header {
 
 @media screen and (min-width: 768px) and (max-width: 1599px) {
   .advantages {
-    margin-top: 30px;
     max-width: 768px;
   }
   .advantages-list {
@@ -577,6 +574,76 @@ header {
   .advantages-list .item:not(:last-child) {
     margin-right: 30px;
   }
+}
+
+.clients-container {
+  text-align: center;
+  padding-top: 60px;
+  padding-bottom: 30px;
+  padding-left: 15px;
+  padding-right: 15px;
+  width: 480px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.clients-container h2 {
+  font-size: 28px;
+  line-height: 1.16;
+  letter-spacing: 0.03em;
+  margin-bottom: 30px;
+}
+
+.clients-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.clients-list .item {
+  margin-bottom: 30px;
+}
+
+.clients-list .item:not(:nth-child(2n)) {
+  margin-right: 30px;
+}
+
+.clients-list-link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  width: 170px;
+  height: 90px;
+  -webkit-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.clients-list-link:hover, .clients-list-link:focus {
+  border: 1px solid #2196f3;
+}
+
+.client-logo {
+  fill: #afb1b8;
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.clients-list-link:hover .client-logo,
+.clients-list-link:focus .client-logo {
+  fill: #2196f3;
 }
 
 .our-team {
@@ -700,23 +767,68 @@ header {
 }
 
 @media screen and (min-width: 768px) and (max-width: 1599px) {
-  .advantages {
-    margin-top: 30px;
+  .team-container {
     max-width: 768px;
   }
-  .advantages-list {
+  .our-team {
+    padding-bottom: 30px;
+  }
+  .our-team-list {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+    margin-top: 30px;
+    max-width: 768px;
+    margin-right: auto;
+    margin-left: auto;
   }
-  .advantages-list .item {
+  .team-member {
     width: calc((100% - 30px * 2) / 2);
     margin: 0;
+    margin-bottom: 30px;
   }
-  .advantages-list .item:not(:nth-child(2n)) {
+  .team-member:not(:nth-child(2n)) {
     margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 1600px) {
+  .team-container {
+    max-width: 1200px;
+  }
+  .our-team {
+    padding-top: 94px;
+    padding-bottom: 94px;
+    background: #f5f4fa;
+    text-align: center;
+  }
+  .our-team-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .team-member {
+    width: calc((100%-90px) / 4);
+    padding-bottom: 35px;
+    margin-right: 30px;
+    background-color: #ffffff;
+    -webkit-box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
+            box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
+    border-radius: 0px 0px 4px 4px;
+  }
+  .team-member:nth-child(4n) {
+    margin-right: 0px;
   }
 }
 
@@ -734,7 +846,7 @@ header {
   }
   .scope-of-business {
     display: block;
-    margin-top: 94px;
+    margin: 94px 0;
   }
   .scope-of-business h2 {
     font-size: 36px;
