--- a/sass/components/_advantages.scss
+++ b/sass/components/_advantages.scss
@@ -7,7 +7,7 @@
 }
 
 .advantages {
-  margin-top: 60px;
+  margin: 60px 0;
   max-width: 480px;
   margin-left: auto;
   margin-right: auto;
@@ -42,7 +42,6 @@
 
 @media screen and (min-width: 768px) and(max-width:1599px) {
   .advantages {
-    margin-top: 30px;
     max-width: 768px;
   }
   .advantages-list {
