--- a/sass/components/_our-team.scss
+++ b/sass/components/_our-team.scss
@@ -85,21 +85,58 @@
 }
 
 @media screen and (min-width: 768px) and(max-width:1599px) {
-  .advantages {
-    margin-top: 30px;
+  .team-container {
     max-width: 768px;
   }
-  .advantages-list {
-    display: flex;
-    flex-wrap: wrap;
+  .our-team {
+    padding-bottom: 30px;
+    &-list {
+      @include display;
+      flex-wrap: wrap;
+      margin-top: 30px;
+      max-width: 768px;
+      margin-right: auto;
+      margin-left: auto;
+    }
   }
-
-  .advantages-list .item {
+  .team-member {
     width: calc((100% - 30px * 2) / 2);
     margin: 0;
+    margin-bottom: 30px;
+
+    &:not(:nth-child(2n)) {
+      margin-right: 30px;
+    }
+  }
+}
+
+@media screen and (min-width: 1600px) {
+  .team-container {
+    max-width: 1200px;
+  }
+  .our-team {
+    padding-top: 94px;
+    padding-bottom: 94px;
+    background: #f5f4fa;
+    text-align: center;
   }
 
-  .advantages-list .item:not(:nth-child(2n)) {
+  .our-team-list {
+    display: flex;
+    align-items: center;
+  }
+
+  .team-member {
+    width: calc((100%-90px) / 4);
+    padding-bottom: 35px;
     margin-right: 30px;
+    background-color: #ffffff;
+    box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
+      0px 1px 3px rgba(0, 0, 0, 0.12);
+    border-radius: 0px 0px 4px 4px;
+  }
+
+  .team-member:nth-child(4n) {
+    margin-right: 0px;
   }
 }
