--- a/sass/components/_our-team.scss
+++ b/sass/components/_our-team.scss
@@ -119,11 +119,11 @@
     padding-bottom: 94px;
     background: #f5f4fa;
     text-align: center;
-  }
 
-  .our-team-list {
-    display: flex;
-    align-items: center;
+    &-list {
+      display: flex;
+      align-items: center;
+    }
   }
 
   .team-member {
@@ -134,9 +134,9 @@
     box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 1px 3px rgba(0, 0, 0, 0.12);
     border-radius: 0px 0px 4px 4px;
-  }
 
-  .team-member:nth-child(4n) {
-    margin-right: 0px;
+    &:nth-child(4n) {
+      margin-right: 0px;
+    }
   }
 }
