--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,7 +5,7 @@
 @import './components/header';
 @import './components/hero';
 @import './components/advantages';
-// @import './components/footer';
+@import './components/footer';
 @import './components/our-clients';
 @import './components/our-team';
 @import './components/scope-of-business';
