--- a/sass/utilites/_variables.scss
+++ b/sass/utilites/_variables.scss
@@ -6,7 +6,7 @@ $footer-adress-color: rgba(255, 255, 255, 0.6);
 $focus-color: #2196f3;
 $background-color: #f5f4fa;
 $client-logo-color: #afb1b8;
-$footer-backgroung: #2f303a;
+$footer-background: #2f303a;
 $border-color: #eeeeee;
 $body-padding: 80px;
 $generalfont: Roboto, sans-serif;
