--- a/css/main.css
+++ b/css/main.css
@@ -576,13 +576,308 @@ header {
   }
 }
 
+.footer {
+  min-width: 480px;
+  background: #2f303a;
+}
+
+.footer-flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 480px;
+  padding: 60px 15px;
+  max-width: 480px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.footer-email {
+  display: block;
+  width: 450px;
+  max-width: 100%;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  -webkit-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  background-color: inherit;
+  color: #ffffff;
+  padding: 15px 16px;
+}
+
+.footer-logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 0;
+  font-size: 24px;
+  line-height: 1.18;
+  color: #ffffff;
+}
+
+.adress {
+  margin-top: 20px;
+  text-align: center;
+  font-style: normal;
+  font-size: 14px;
+  line-height: 2.36;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+  background: none;
+}
+
+.adress span {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+}
+
+.social-media-links {
+  margin-top: 60px;
+  text-align: center;
+}
+
+.social-media-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.social-media-list li + li {
+  margin-left: 10px;
+}
+
+.social-media-list .item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 20px;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.1);
+  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-media-list .item:hover, .social-media-list .item:focus {
+  background-color: #2196f3;
+}
+
+.social-media-list .item:hover .social-links-icon,
+.social-media-list .item:focus .social-links-icon {
+  fill: #ffffff;
+}
+
+.social-links-icon {
+  width: 20px;
+  height: 20px;
+  fill: #afb1b8;
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.title-white,
+.subscribe .title-white {
+  margin-bottom: 20px;
+}
+
+.subscribe {
+  margin-top: 60px;
+  text-align: center;
+}
+
+.subscribe-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-top: 20px;
+}
+
+.submitt {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 20px;
+  width: 200px;
+  height: 50px;
+  background-color: #2196f3;
+  -webkit-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 30px;
+  color: #ffffff;
+  letter-spacing: 0.06em;
+}
+
+.submitt-icon {
+  margin-left: 10px;
+  height: 24px;
+  width: 24px;
+}
+
+.title-white {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+  background: rgba(47, 48, 58, 0.8);
+}
+
+@media screen and (min-width: 768px) and (max-width: 1599px) {
+  .footer-flex {
+    min-width: 768px;
+  }
+  .tablet {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    width: 100%;
+  }
+  .social-media-links {
+    margin: 0;
+  }
+}
+
+@media screen and (min-width: 1600px) {
+  .footer-flex {
+    min-width: 1200px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    padding-top: 45px;
+    padding-bottom: 21px;
+  }
+  .tablet {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .social-media-links {
+    padding-top: 12px;
+    display: block;
+    text-align: initial;
+    margin: 0;
+  }
+  .contacts {
+    margin-right: 69px;
+  }
+  .footer-logo {
+    display: block;
+    font-size: 26px;
+  }
+  .adress {
+    text-align: initial;
+  }
+  .social-media-links .title-white,
+  .subscribe .title-white {
+    margin-bottom: 20px;
+  }
+  .subscribe {
+    text-align: initial;
+    padding-top: 12px;
+    margin: 0;
+    margin-left: auto;
+  }
+  .subscribe-form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    margin-top: 20px;
+  }
+  .footer-email {
+    width: 358px;
+    margin-right: 12px;
+  }
+  .submitt {
+    margin-top: 0;
+  }
+  .submitt-icon {
+    margin-left: 10px;
+    height: 24px;
+    width: 24px;
+  }
+}
+
 .clients-container {
   text-align: center;
   padding-top: 60px;
   padding-bottom: 30px;
   padding-left: 15px;
   padding-right: 15px;
-  width: 480px;
+  max-width: 480px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -644,6 +939,37 @@ header {
 .clients-list-link:hover .client-logo,
 .clients-list-link:focus .client-logo {
   fill: #2196f3;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1599px) {
+  .clients-container {
+    min-width: 768px;
+  }
+  .clients-list .item {
+    margin-right: 30px;
+  }
+  .clients-list .item:nth-child(3n) {
+    margin-right: 0;
+  }
+}
+
+@media screen and (min-width: 1600px) {
+  .clients-container {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    min-width: 1200px;
+    padding: 94px 15px;
+  }
+  .clients-container h2 {
+    font-size: 36px;
+    margin-bottom: 50px;
+  }
+  .clients-list .item:not(:nth-child(6n)) {
+    margin-right: 30px;
+  }
 }
 
 .our-team {
