--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -3,6 +3,6 @@
 @import './utilites/mixins';
 @import './utilites/general';
 @import './components/header';
-// @import './components/filterbuttons';
+@import './components/filterbuttons';
 // @import './components/projects';
 @import './components/footer';
