techno photos added

--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -4,5 +4,5 @@
 @import './utilites/general';
 @import './components/header';
 @import './components/filterbuttons';
-// @import './components/projects';
+@import './components/projects';
 @import './components/footer';
