--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -383,10 +383,16 @@ header {
 }
 
 .portfolio-container {
-  width: 480px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
   padding: 60px 15px;
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .portfolio-container {
+    width: 480px;
+  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1599px) {
@@ -465,6 +471,104 @@ header {
   color: #ffffff;
   background-color: #2196f3;
   cursor: pointer;
+}
+
+.projects-list {
+  margin-top: 25px;
+}
+
+.projects-list h2 {
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
+
+@media screen and (min-width: 768px) {
+  .projects-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+@media screen and (min-width: 1600px) {
+  .projects-list {
+    margin-top: 35px;
+  }
+}
+
+.wrapper {
+  position: relative;
+  overflow: hidden;
+}
+
+.wrapper img {
+  max-width: 100%;
+}
+
+.project-item {
+  margin-right: 30px;
+  margin-bottom: 30px;
+  width: 370px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #eeeeee;
+}
+
+.project-item:nth-child(3n) {
+  margin-right: 0;
+}
+
+.project-item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+}
+
+.project-item > a:hover,
+.project-item > a:focus {
+  -webkit-box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0 4px 4px rgba(0, 0, 0, 0.06), 0 1px 1px rgba(0, 0, 0, 0.12);
+          box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0 4px 4px rgba(0, 0, 0, 0.06), 0 1px 1px rgba(0, 0, 0, 0.12);
+}
+
+.project-text {
+  padding: 20px 24px;
+}
+
+.project-type {
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+
+.project-description {
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-transform: translateY(100%);
+          transform: translateY(100%);
+  width: 100%;
+  height: 100%;
+  padding: 63px 24px;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  background-color: rgba(33, 150, 243, 0.9);
+  border-width: 1px;
+  border-style: solid;
+  border-color: #eeeeee;
+  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.project-item > a:hover .project-description,
+.project-item > a:focus .project-description {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
 }
 
 .footer {
