--- a/sass/components/_filterbuttons.scss
+++ b/sass/components/_filterbuttons.scss
@@ -1,8 +1,11 @@
 .portfolio-container {
-  width: 480px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
   padding: 60px 15px;
+  @media screen and (min-width: 480px) and (max-width: 767px) {
+    width: 480px;
+  }
   @media screen and (min-width: 768px) and (max-width: 1599px) {
     width: 768px;
   }
