--- a/sass/components/_projects.scss
+++ b/sass/components/_projects.scss
@@ -1,12 +1,17 @@
 .projects-list {
-  display: flex;
-  flex-wrap: wrap;
-  margin-top: 50px;
+  margin-top: 25px;
 
   h2 {
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
+  }
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  @media screen and (min-width: 1600px) {
+    margin-top: 35px;
   }
 }
 
